fixed spacing of second word of header

--- a/src/components/registration-page.css
+++ b/src/components/registration-page.css
@@ -65,6 +65,8 @@
 }
 
 .second-word {
+    position: relative;
+    bottom: 2px;
     letter-spacing: 1px;
     margin-left: 15px;
     color: #000000;
